clone stamp crashes #38045

Closed
opened 2014-01-03 15:18:52 +01:00 by Fredrik Hansson · 9 comments

System Information
Operating system and graphics card
Vista ultimate x64
intel i7 950
geforce gtx 580

Blender Version
Broken: (example: 2.69.7 4b206af, see splash screen)
ba8d65a
Worked: (optional)
official 2.69 seems to work
Short description of error

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps
open the blend file and start drawing should crash after one or 2 strokes usually on just clicking on the mesh

**System Information** Operating system and graphics card Vista ultimate x64 intel i7 950 geforce gtx 580 **Blender Version** Broken: (example: 2.69.7 4b206af, see splash screen) ba8d65a Worked: (optional) official 2.69 seems to work **Short description of error** **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps open the blend file and start drawing should crash after one or 2 strokes usually on just clicking on the mesh

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @FredrikHson

Added subscriber: @FredrikHson
[clonecrash.blend](https://archive.blender.org/developer/F61061/clonecrash.blend)

Added subscriber: @Sergey

Added subscriber: @Sergey
Sergey Sharybin self-assigned this 2014-01-03 17:32:24 +01:00

This issue was referenced by blender/blender-addons-contrib@0dabf824fb

This issue was referenced by blender/blender-addons-contrib@0dabf824fbcb7d343919edd88e29bd267a8734f6

This issue was referenced by 0dabf824fb

This issue was referenced by 0dabf824fbcb7d343919edd88e29bd267a8734f6

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 0dabf824fb.

Closed by commit 0dabf824fb.

I commited a patch which solves issue i've discovered and which seems to fix this crash. But such kind of issues are bit heisen-bugs, so it still might be some culptrit in the code. Plase let me know if you still do have an issues!

I commited a patch which solves issue i've discovered and which seems to fix this crash. But such kind of issues are bit heisen-bugs, so it still might be some culptrit in the code. Plase let me know if you still do have an issues!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38045
No description provided.